# fedal-r2d2

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.uv  README.md  docker-compose.yaml  enums.py  exceptions.py  genezio.yaml  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 19ebc82230e5_add_more_form_fields.py  4a08ce8d2d1a_adding_message_body.py  61dde2682d05_added_captcha_key_for_the_zaansrecht_.py  6d678f5c1f35_added_updated_at_to_have_the_latest_.py  df1ff6bb5719_your_message.py  e6034481a741_form_submitlogger_added_with_moving_the_.py  ffb7e7b7571a_zaansrecht_form_created.py
app/: main.py
configs/: db.py  logs.py
crons/: send_email.py
dependencies/: auth.py
models/: email_log.py  form.py
routers/: email.py  form.py
schemas/: forms.py
services/: emai_service.py  form_service.py
